# DAEDALUS

./: .gitignore  CLAUDE.md  Cargo.toml  PROJECT_PLAN.md  README.md
crates/forge-ai/: Cargo.toml
crates/forge-ai/src/: lib.rs  prompts.rs  provider.rs  types.rs
crates/forge-ai/src/providers/: claude.rs  mod.rs  ollama.rs  openai.rs
crates/forge-app/: Cargo.toml  tauri.conf.json
crates/forge-app/capabilities/: default.json
crates/forge-app/src/: main.rs  state.rs
crates/forge-app/src/commands/: ai.rs  binary.rs  connection.rs  dtc.rs  flash.rs  mod.rs  reverse.rs
crates/forge-binary/: Cargo.toml
crates/forge-binary/src/: diff.rs  hex_view.rs  lib.rs  map_finder.rs  parser.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: config.rs  error.rs  lib.rs  project.rs  types.rs
crates/forge-dtc/: Cargo.toml
crates/forge-dtc/src/: database.rs  lib.rs  parser.rs  types.rs
crates/forge-flash/: Cargo.toml
crates/forge-flash/src/: backup.rs  checksum.rs  lib.rs  safety.rs
crates/forge-hal/: Cargo.toml
crates/forge-hal/src/: adapter.rs  lib.rs  mock.rs
crates/forge-live/: Cargo.toml
crates/forge-live/src/: lib.rs  recorder.rs  types.rs
crates/forge-proto/: Cargo.toml
crates/forge-proto/src/: isotp.rs  j1939.rs  lib.rs  obd2.rs  uds.rs
data/dtc/: j1939_spn_fmi.json  obd2_standard.json
data/pinouts/: bosch_edc17c46.json  cummins_cm2350.json
data/pinouts/processors/: infineon_tc1797.json
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/ai/: AIChat.tsx  SafetyDebatePanel.tsx  WhatIfSimulator.tsx
frontend/src/components/common/: SettingsPanel.tsx
frontend/src/components/connection/: ConnectionPanel.tsx
frontend/src/components/dtc/: DTCViewer.tsx
frontend/src/components/editor/: DiffView.tsx  HexEditor.tsx  MapEditor2D.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx  StatusBar.tsx
frontend/src/components/live/: LiveDataPanel.tsx
frontend/src/components/reverse/: ReversePanel.tsx
frontend/src/lib/: tauri.ts
frontend/src/stores/: connectionStore.ts  reverseStore.ts  settingsStore.ts  uiStore.ts
frontend/src/styles/: global.css
frontend/src/types/: index.ts
python/: README.md  pyproject.toml  server.py
python/daedalus/: __init__.py
python/daedalus/ai/: client.py
scripts/: setup_dev.sh  setup_socketcan.sh
tests/harness/: README.md  test_harness.py
tests/harness/config/: profiles.yaml
