[workspace]
resolver = "2"
members = [
    "crates/forge-core",
    "crates/forge-hal",
    "crates/forge-proto",
    "crates/forge-flash",
    "crates/forge-binary",
    "crates/forge-dtc",
    "crates/forge-live",
    "crates/forge-ai",
    "crates/forge-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Daedalus Contributors"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
