[project]
name = "daedalus"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "numpy>=2.0",
    "scipy>=1.14",
    "pydantic>=2.10",
    "onnxruntime>=1.19",
    "python-can>=4.4",
    "udsoncan>=1.23",
    "can-isotp>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]
