[package]
name = "forge-ai"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
keyring = "3"
