[package]
name = "forge-hal"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait = "0.1"
forge-core = { path = "../forge-core" }
forge-proto = { path = "../forge-proto" }
